--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
             android:exported="false" />
         <activity
             android:name=".activity.Login"
+            android:theme="@style/themebg"
             android:windowSoftInputMode="adjustResize"
             android:exported="true">
             <intent-filter>
