--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,10 @@
             android:name=".activity.TransaksiDetailActivity"
             android:exported="false" />
         <activity
+            android:name=".activity.PendingActivity"
+            android:theme="@style/themeutamabg"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
             android:name=".activity.Login"
             android:theme="@style/themebg"
             android:windowSoftInputMode="adjustResize"
@@ -58,6 +62,7 @@
         </activity>
         <activity
             android:name=".activity.Menu"
+            android:theme="@style/themebg"
             android:exported="false" />
     </application>
 
