--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,10 @@
             android:theme="@style/themeutamabg"
             android:windowSoftInputMode="adjustResize" />
         <activity
+            android:name=".activity.Laporan"
+            android:theme="@style/themeutamabg"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
             android:name=".activity.Login"
             android:theme="@style/themebg"
             android:windowSoftInputMode="adjustResize"
